Updated draft of SF Marketing Products FAQ

--- a/sites/faq/salesforce/what-is-the-difference-between-sf-marketing-clouds.mdx
+++ b/sites/faq/salesforce/what-is-the-difference-between-sf-marketing-clouds.mdx
@@ -170,6 +170,12 @@ However, if you are using Marketing Cloud Engagement, it is still the best optio
 
 :::
 
+<Button
+ link='/docs/category/salesforce/marketing-cloud-personalization/'
+ text='Read my MCP Docs'
+ newTab='true'
+/>
+
 #### Salesforce Personalization
 
 __Name history__: Einstein Personalization (EP) » Salesforce Personalization (SP)
@@ -205,6 +211,13 @@ On the other hand:
 | **Ideal For** | Businesses with personalization and recommendation needs | Businesses with small volumes and huge margins |
 | **State** | Well established product | Publicly available beta |
 
+### Marketing Intelligence Platforms
+
+Salesforce currently offers also two Marketing Intelligence product. The legacy Marketing Cloud Intelligence (previously called Datorama) and the new Salesforce Marketing Intelligence.
+
+Similarly to the Real-Time Personalization products, the old one is a mature and powerful platform acquired by Salesforce and currently being left to rot without updates, while the new one is part of the new built-on-data-cloud batch of products still in its infancy.
+
+As I don't have much experience with neither of them, I won't go into details here.
 
 
 
